
Version 3.0.0 ->
----------------
 - improved support for building on Windows with mingw32
 - added wininst target to Makefile
 - added port of ICUNormalizer2Filter using C++ ICU's Normalizer2 via PyICU
 - added port of ICUFoldingFilter using C++ ICU's Normalizer2 via PyICU
 - added port of ICUTransformFilter using C++ ICU's Transliterator via PyICU
 - PyLucene built with JCC 2.6
 - 

Version 2.9.0 -> 3.0.0
----------------------
 - unit tests ported to new API
 - removed InstantiatedIndex contrib from default build
 - with JCC 2.5's Java generics support, a lot less downcasting needed
 - Java Lucene sources now included in PyLucene source distribution
 - "Lucene in Action" samples and tests converted to new Lucene 3.0 API
 - PyLucene built with JCC 2.5

Version 2.4.1 -> 2.9.0
----------------------
 - renamed the Highlighter's SpanScorer class to HighlighterSpanScorer
 - fixed bug in Makefile's test target which tested installed build
 - added Mac OS X 10.6 sections to Makefile
 - added FieldCache.Parser Python extension classes (used in test/test_Sort.py)
 - added FieldComparator and FieldComparatorSource Python extension classes
 - added 'memory' contrib module to default build
 - PyLucene built with JCC 2.4

Version 2.4.0 -> 2.4.1
----------------------
 - PyLucene with JCC now a subproject of the Apache Lucene project
 - documentation moved to http://lucene.apache.org/pylucene
 - added java.util.Arrays to the build to bridge the Java array/collection gap
 - added collections.py module with JavaSet class, a Python java.util.Set
 - fixed bug in PythonQueryParser overriding wrong method (Aaron Lav)
 - PyLucene built with JCC 2.2
 - fixed bug with collections.py shadowing Python 2.6's during build
 - passing strings for byte[] or char[] is no longer supported, use JArray
 - added copy of PyLucene web site to distribution for offline viewing

Version 2.3.2 -> 2.4.0
----------------------
 - fixed Debian bug http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=499599